--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>ALL IBM</title>
+    <title>Welcome to IBM</title>
 </head>
 <body>
-    <h1>contents</h1>
+    <h1>welcome page</h1>
+    <button>すすむ</button>
 </body>
 </html>
