--- a/pages/index.html
+++ b/pages/index.html
@@ -8,11 +8,11 @@
 <body>
     <h1>welcome page</h1>
     <!--交差点に導く-->
-    <button href="corssroad.html">すすむ</button>
+    <a href="corssroad.html">すすむ</a>
     <!--サインイン-->
-    <button href="register.html">サインイン</button>
+    <a href="register.html">サインイン</a>
     <!--ログイン-->
-    <button href="login.html">ログイン</button>
+    <a href="login.html">ログイン</a>
 
 
 
