--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>welcome page</h1>
     <!--交差点に導く-->
-    <a href="corssroad.html">すすむ</a>
+    <a href="crossroad.html">すすむ</a>
     <!--サインイン-->
     <a href="register.html">サインイン</a>
     <!--ログイン-->
