--- a/pages/crossroad.html
+++ b/pages/crossroad.html
@@ -12,7 +12,7 @@
     <!--ログイン-->
     <a href="meetingroom.html">会議室</a>
     <!--indexにもどる-->
-    <a href="index.html"></a>>
+    <a href="index.html">もどる</a>
 
 
     <!--スクリプト読み込み-->
