enables place1 and place2

--- a/pages/index.html
+++ b/pages/index.html
@@ -14,8 +14,8 @@
     <!--ログイン-->
     <a href="login.html">ログイン</a>
 
-
-
+    <!--企業ページに-->
+    <a href="mypage.html">企業ページへ</a>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
 </body>
