--- a/pages/place1.html
+++ b/pages/place1.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
-    <h1>ログインページ</h1>
-
-    <!--認証成功したら，画面遷移する-->
-
+    <h1>場所１</h1>
+    <!--crossroadへ-->
+    <a href="crossroad.html">交差点へ</a>
+    <a href="place2.html">場所２へ</a>
+    <br>
+    <a href="person1.html">人物１</a>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
 </body>
