--- a/pages/place2.html
+++ b/pages/place2.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
-    <h1>ログインページ</h1>
-
-    <!--認証成功したら，画面遷移する-->
-
+    <h1>場所２</h1>
+    <!--crossroadへ-->
+    <a href="place1.html">場所１へ</a>
+    <br>
+    <a href="person2.html">人物２</a>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
 </body>
