enable meetingroom and relink place1

--- a/pages/crossroad.html
+++ b/pages/crossroad.html
@@ -8,7 +8,7 @@
 <body>
     <h1>cross road</h1>
     <!--サインイン-->
-    <a href="cafeteria.html">食堂</a>
+    <a href="place1.html">場所１</a>
     <!--ログイン-->
     <a href="meetingroom.html">会議室</a>
     <!--indexにもどる-->
