changed aggregate chart style and h1 h2 style

--- a/pages/meetingroom.html
+++ b/pages/meetingroom.html
@@ -10,6 +10,7 @@
     
 
     <a href="mypage.html">企業ページへ</a>
+    <a href="crossroad.html">もどる</a>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
 </body>
