--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -4,22 +4,20 @@
     <meta charset="utf-8">
     <title>Welcome to IBM</title>
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
+    <!-- <canvas id="LineChart"></canvas> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
 </head>
 <body>
-    <canvas id="LineChart"></canvas>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
-
-    <h1>企業ページ（折れ線グラフ）</h1>
+    <h1>企業ページ（統計データ）</h1>
     
-    <div class="aggregategraph">
-        <script>
-            makeGraph();
-        </script>
+    <div style="width:75%;" class="aggregategraph">
+        <canvas id="LineChart" style="display: block; height: 59px; width: 119px;" width="178" height="88" class="chartjs-render-monitor">
     </div>
-
+    <h2>Details</h2>
     <a href="mypage.html">企業ページへ</a>
+    <a href="meetingroom.html">もどる</a>
     <!--スクリプト読み込み-->
-    <script src="../src/main.js"></script>
     <script src="../src/presentdatas.js"></script>
+    <script src="../src/main.js"></script>
 </body>
 </html>
