added detailed pages

--- a/pages/button0heat.html
+++ b/pages/button0heat.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
-    <h1>Smile Details</h1>
+    <h1>OK Details</h1>
     <!--indexにもどる-->
     <a href="mypage.html">マイページにもどる</a>
 
