--- a/pages/index.html
+++ b/pages/index.html
@@ -6,16 +6,17 @@
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
-    <h1>welcome page</h1>
-    <!--交差点に導く-->
-    <a href="crossroad.html">すすむ</a>
-    <!--サインイン-->
-    <a href="register.html">サインイン</a>
-    <!--ログイン-->
-    <a href="login.html">ログイン</a>
-
-    <!--企業ページに-->
-    <a href="mypage.html">企業ページへ</a>
+    <div class="top-wrapper">
+        <div class="container">
+          <h1>Welcome to IBM</h1>
+          <div class="btn-wrapper">
+            <a href="register.html" class="btn">新規登録はこちら</a>
+            <a href="login.html" class="btn">ログインはこちら</a>
+            <a href="mypage.html" class="btn">企業向けマイページ</a>
+        </div>
+        </div>
+      </div>
+    </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
 </body>
