--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -10,7 +10,9 @@
 <body>
     <h1>企業ページ（統計データ）</h1>
     
-    <canvas id="LineChart" style="display: block; height: 59px; width: 119px;" width="178" height="88" class="chartjs-render-monitor">
+    <div style="width:75%;" class="aggregategraph">
+        <canvas id="LineChart" style="display: block; height: 59px; width: 119px;" width="178" height="88" class="chartjs-render-monitor">
+    </div>
 
     <h2>Details</h2>
     
