register and login scene

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,9 +4,32 @@
     <meta charset="utf-8">
     <title>Welcome to IBM</title>
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
+    <link rel="stylesheet" href="../stylesheet/entrance.css">
 </head>
 <body>
-    <div class="top-wrapper">
+    <header>
+        <div class="container">
+          <div class="header-left">
+            <img class="logo" src="../img/logo.png">
+          </div>
+          <div class="header-left1">
+            <a href="meetingroom.html" class="login">Online Session</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Work in IBM</a>
+          </div>
+          <div class="header-left1">
+            <a href="mypage.html" class="login">My Page</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Support</a>
+          </div>
+          <div class="header-right">
+            <a href="login.html" class="login">login</a>
+          </div>
+        </div>
+    </header>
+    <div class="top-wrapper-entrance">
         <div class="container">
           <h1>Welcome to IBM</h1>
           <div class="btn-wrapper">
