--- a/pages/login.html
+++ b/pages/login.html
@@ -2,14 +2,53 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Welcome to IBM</title>
+    <title>register</title>
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
-    <h1>ログインページ</h1>
-
-    <!--認証成功したら，画面遷移する-->
-
+    <header>
+        <div class="container">
+          <div class="header-left">
+            <img class="logo" src="../img/logo.png">
+          </div>
+          <div class="header-left1">
+            <a href="meetingroom.html" class="login">Online Session</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Work in IBM</a>
+          </div>
+          <div class="header-left1">
+            <a href="mypage.html" class="login">My Page</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Support</a>
+          </div>
+          <div class="header-right">
+            <a href="login.html" class="login">login</a>
+          </div>
+        </div>
+    </header>
+    <div class="top-wrapper-normal">
+        <div class="container">
+          <h1>ログイン</h1>
+          <div class="register">
+            <table border="0" width="500" cellspacing="0" cellpadding="5">
+                <tr>
+                <th align="right">ユーザー名：</th>
+                <th><input></input></th>
+                </tr>
+                <tr>
+                <th align="right">パスワード：</th>
+                <th><input></input></th>
+                </tr>
+                </table>
+          </div>
+          <div class="btn-wrapper-register">
+            <a href="crossroad.html" class="btn">ログイン</a>
+        </div>
+        </div>
+      </div>
+    </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
 </body>
