--- a/pages/register.html
+++ b/pages/register.html
@@ -2,13 +2,81 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Welcome to IBM</title>
+    <title>register</title>
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
-    <h1>registerページ</h1>
-
-
+    <header>
+        <div class="container">
+          <div class="header-left">
+            <img class="logo" src="../img/logo.png">
+          </div>
+          <div class="header-left1">
+            <a href="meetingroom.html" class="login">Online Session</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Work in IBM</a>
+          </div>
+          <div class="header-left1">
+            <a href="mypage.html" class="login">My Page</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Support</a>
+          </div>
+          <!-- <div class="header-right">
+            <a href="login.html" class="login">login</a>
+          </div> -->
+        </div>
+    </header>
+    <div class="top-wrapper-normal">
+        <div class="container">
+          <h1>アカウント登録</h1>
+          <div class="register">
+            <table border="0" width="500" cellspacing="0" cellpadding="5">
+                <tr>
+                <th align="right">ユーザー名：</th>
+                <th><input></input></th>
+                </tr>
+                <tr>
+                <th align="right">性別：</th>
+                <th><input></input></th>
+                </tr>
+                <tr>
+                <th align="right">大学所在都道府県：</th>
+                <th><input></input></th>
+                </tr>
+                <tr>
+                <th align="right">文理：</th>
+                <th><input></input></th>
+                </tr>
+                <tr>
+                <th align="right">専攻：</th>
+                <th><input></input></th>
+                </tr>
+                <tr>
+                <th align="right">志望業界：</th>
+                <th><input></input></th>
+                </tr>
+                <tr>
+                <th align="right">第一志望：</th>
+                <th><input></input></th>
+                </tr>
+                <tr>
+                <th align="right">第二志望：</th>
+                <th><input></input></th>
+                </tr>
+                <tr>
+                <th align="right">パスワード設定：</th>
+                <th><input></input></th>
+                </tr>
+                </table>
+          </div>
+          <div class="btn-wrapper-register">
+            <a href="login.html" class="btn">登録</a>
+        </div>
+        </div>
+      </div>
+    </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
 </body>
