style change and background change to places

--- a/pages/person2.html
+++ b/pages/person2.html
@@ -6,6 +6,28 @@
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+          <div class="header-left">
+            <a href="index.html"><img class="logo" src="../img/logo.png"></a>
+          </div>
+          <div class="header-left1">
+            <a href="LiveView.html" class="login">Online Session</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Work in IBM</a>
+          </div>
+          <div class="header-left1">
+            <a href="mypage.html" class="login">My Page</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Support</a>
+          </div>
+          <div class="header-right">
+            <a href="#" class="login">マイページ</a>
+          </div>
+        </div>
+	</header>
     <h1>人物２</h1>
     <!--crossroadへ-->
     <a href="place2.html">場所２へ戻る</a>
