--- a/pages/place1.html
+++ b/pages/place1.html
@@ -6,12 +6,36 @@
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
-    <h1>場所１</h1>
-    <!--crossroadへ-->
-    <a href="crossroad.html">交差点へ</a>
-    <a href="place2.html">場所２へ</a>
-    <br>
-    <a href="person1.html">人物１</a>
+    <header>
+        <div class="container">
+          <div class="header-left">
+            <a href="index.html"><img class="logo" src="../img/logo.png"></a>
+          </div>
+          <div class="header-left1">
+            <a href="LiveView.html" class="login">Online Session</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Work in IBM</a>
+          </div>
+          <div class="header-left1">
+            <a href="mypage.html" class="login">My Page</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Support</a>
+          </div>
+          <div class="header-right">
+            <a href="#" class="login">マイページ</a>
+          </div>
+        </div>
+    </header>
+    <div class="top-wrapper-place1">
+        <div class="container">
+            <h1>場所１</h1>
+            <a href="place2.html">場所２へ</a>
+            <br>
+            <a href="person1.html">人物１</a>
+        </div>
+    </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
 </body>
