--- a/pages/place2.html
+++ b/pages/place2.html
@@ -6,11 +6,38 @@
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
-    <h1>場所２</h1>
-    <!--crossroadへ-->
-    <a href="place1.html">場所１へ</a>
-    <br>
-    <a href="person2.html">人物２</a>
+    <header>
+        <div class="container">
+          <div class="header-left">
+            <a href="index.html"><img class="logo" src="../img/logo.png"></a>
+          </div>
+          <div class="header-left1">
+            <a href="LiveView.html" class="login">Online Session</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Work in IBM</a>
+          </div>
+          <div class="header-left1">
+            <a href="mypage.html" class="login">My Page</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Support</a>
+          </div>
+          <div class="header-right">
+            <a href="#" class="login">マイページ</a>
+          </div>
+        </div>
+    </header>
+    <div class="top-wrapper-place2">
+        <div class="container">
+            <h1>場所２</h1>
+            <!--crossroadへ-->
+            <a href="place1.html">場所１へ</a>
+            <a href="LiveView.html">会議室へ</a>
+            <br>
+            <a href="person2.html">人物２</a>
+        </div>
+    </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
 </body>
