--- a/pages/crossroad.html
+++ b/pages/crossroad.html
@@ -6,11 +6,33 @@
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+          <div class="header-left">
+            <a href="index.html"><img class="logo" src="../img/logo.png"></a>
+          </div>
+          <div class="header-left1">
+            <a href="LiveView.html" class="login">Online Session</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Work in IBM</a>
+          </div>
+          <div class="header-left1">
+            <a href="mypage.html" class="login">My Page</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Support</a>
+          </div>
+          <div class="header-right">
+            <a href="#" class="login">マイページ</a>
+          </div>
+        </div>
+	</header>
     <h1>cross road</h1>
     <!--サインイン-->
     <a href="place1.html">場所１</a>
     <!--ログイン-->
-    <a href="meetingroom.html">会議室</a>
+    <a href="LiveView.html">会議室</a>
     <!--indexにもどる-->
     <a href="index.html">もどる</a>
 
