--- a/pages/login.html
+++ b/pages/login.html
@@ -9,10 +9,10 @@
     <header>
         <div class="container">
           <div class="header-left">
-            <img class="logo" src="../img/logo.png">
+            <a href="index.html"><img class="logo" src="../img/logo.png"></a>
           </div>
           <div class="header-left1">
-            <a href="meetingroom.html" class="login">Online Session</a>
+            <a href="LiveView.html" class="login">Online Session</a>
           </div>
           <div class="header-left1">
             <a href="#" class="login">Work in IBM</a>
@@ -42,10 +42,10 @@
                 <th><input></input></th>
                 </tr>
                 </table>
+                <div class="btn-wrapper-register">
+                  <a href="place1.html" class="btn">ログイン</a>
+                </div>
           </div>
-          <div class="btn-wrapper-register">
-            <a href="crossroad.html" class="btn">ログイン</a>
-        </div>
         </div>
       </div>
     </div>
