--- a/pages/register.html
+++ b/pages/register.html
@@ -9,10 +9,10 @@
     <header>
         <div class="container">
           <div class="header-left">
-            <img class="logo" src="../img/logo.png">
+            <a href="index.html"><img class="logo" src="../img/logo.png"></a>
           </div>
           <div class="header-left1">
-            <a href="meetingroom.html" class="login">Online Session</a>
+            <a href="LiveView.html" class="login">Online Session</a>
           </div>
           <div class="header-left1">
             <a href="#" class="login">Work in IBM</a>
