add man and woman shadow

--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -8,6 +8,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
 </head>
 <body>
+    <header>
+        <div class="container">
+          <div class="header-left">
+            <a href="index.html"><img class="logo" src="../img/logo.png"></a>
+          </div>
+          <div class="header-left1">
+            <a href="LiveView.html" class="login">Online Session</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Work in IBM</a>
+          </div>
+          <div class="header-left1">
+            <a href="mypage.html" class="login">My Page</a>
+          </div>
+          <div class="header-left1">
+            <a href="#" class="login">Support</a>
+          </div>
+          <div class="header-right">
+            <a href="#" class="login">マイページ</a>
+          </div>
+        </div>
+    </header>
+    <div class="top-wrapper-normal">
     <h1>企業ページ（統計データ）</h1>
     
     <div style="width:75%;" class="aggregategraph">
@@ -26,5 +49,6 @@
     <!--スクリプト読み込み-->
     <script src="../src/presentdatas.js"></script>
     <script src="../src/main.js"></script>
+    </div>
 </body>
 </html>
