--- a/pages/person1.html
+++ b/pages/person1.html
@@ -27,11 +27,13 @@
             <a href="#" class="login">マイページ</a>
           </div>
         </div>
-	</header>
-    <h1>人物１</h1>
-    <!--crossroadへ-->
-    <a href="place1.html">場所１へ戻る</a>
-
+    </header>
+    <div class="top-wrapper-place1">
+        <div class="container">
+            <h1>人物１</h1>
+            <a href="place1.html">もどる</a>
+        </div>
+    </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
 </body>
