--- a/pages/person2.html
+++ b/pages/person2.html
@@ -30,7 +30,7 @@
 	</header>
     <h1>人物２</h1>
     <!--crossroadへ-->
-    <a href="place2.html">場所２へ戻る</a>
+    <a href="place2.html">戻る</a>
 
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
