--- a/pages/place1.html
+++ b/pages/place1.html
@@ -31,6 +31,7 @@
     <div class="top-wrapper-place1">
         <div class="container">
             <h1>場所１</h1>
+            <img src="../img/man.png">
             <a href="place2.html">場所２へ</a>
             <br>
             <a href="person1.html">人物１</a>
