--- a/pages/place2.html
+++ b/pages/place2.html
@@ -31,7 +31,7 @@
     <div class="top-wrapper-place2">
         <div class="container">
             <h1>場所２</h1>
-            <!--crossroadへ-->
+            <img src="../img/woman.png">
             <a href="place1.html">場所１へ</a>
             <a href="LiveView.html">会議室へ</a>
             <br>
