--- a/pages/place2.html
+++ b/pages/place2.html
@@ -31,10 +31,10 @@
     <div class="top-wrapper-place2">
         <div class="container">
             <h1>場所２</h1>
-            <div class="css-fukidashi">
-                 <p class="fukidashi">プロジェクトマネジャー</p>
-　　　　　　</div>
-            <img src="../img/woman.png">
+            <div class="tooltip">
+                <img src="../img/woman.png">
+                <div class="description">プロジェクトマネージャー</div>
+            </div>            
             <a href="place1.html">場所１へ</a>
             <a href="LiveView.html">会議室へ</a>
             <br>
