--- a/pages/place2.html
+++ b/pages/place2.html
@@ -30,15 +30,14 @@
     </header>
     <div class="top-wrapper-place2">
         <div class="container">
-            <h1>場所２</h1>
             <div class="tooltip">
-                <img src="../img/woman.png">
+                <a href="person2.html"><img src="../img/woman.png"></a>
                 <div class="description">プロジェクトマネージャー</div>
             </div>            
             <a href="place1.html">場所１へ</a>
             <a href="LiveView.html">会議室へ</a>
             <br>
-            <a href="person2.html">人物２</a>
+            
         </div>
     </div>
     <!--スクリプト読み込み-->
