--- a/pages/place2.html
+++ b/pages/place2.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="tooltip">
                 <a href="person2.html"><img src="../img/woman.png"></a>
-                <div class="description">プロジェクトマネージャー</div>
+                <div class="description">ITコンサルティング<br>入社3年目</div>
             </div>            
             <a href="place1.html">場所１へ</a>
             <a href="LiveView.html">会議室へ</a>
