--- a/pages/place1.html
+++ b/pages/place1.html
@@ -30,10 +30,9 @@
     </header>
     <div class="top-wrapper-place1">
         <div class="container">
-            <h1>場所１</h1>
 			<div class="tooltip">
                 <a href="person1.html"><img src="../img/man.png"></a>
-                <div class="description">ITコンサルティング<br>入社3年目</div>
+                <div class="description">プロジェクトマネージャー<br>入社15年目</div>
             </div> 
             <a href="place2.html">場所２へ</a>
             <br>
