--- a/pages/archive.html
+++ b/pages/archive.html
@@ -30,7 +30,8 @@
         </div>
     </header>
     <div class="unfinished">
-        <img src="../img/comments.png" height="660">
+        <img src="../img/archive.png" height="660"><br>
+        <a href="#">next</a>
     </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
