--- a/pages/ibmgraph4.html
+++ b/pages/ibmgraph4.html
@@ -30,7 +30,7 @@
         </div>
     </header>
     <div class="unfinished">
-        <img src="../img/comments.png" height="660">
+        <img src="../img/ibmgraph4.png" height="660">
     </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
