--- a/pages/place1.html
+++ b/pages/place1.html
@@ -36,7 +36,7 @@
             </div> 
             <a href="place2.html">場所２へ</a>
             <br>
-            <a href="person1.html">人物１</a>
+            <a href="person1-1.html">人物１</a>
         </div>
     </div>
     <!--スクリプト読み込み-->
