--- a/pages/person1-1.html
+++ b/pages/person1-1.html
@@ -30,7 +30,9 @@
         </div>
     </header>
     <div class="unfinished">
-        <img src="../img/person1-1.png" height="660">
+        <img src="../img/person1-1.png" height="660"><br>
+        <a href="place1.html">return to place1</a>
+        <a href="person1-2.html">next</a>
     </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
