added some links

--- a/pages/ibmgraph2.html
+++ b/pages/ibmgraph2.html
@@ -30,7 +30,8 @@
         </div>
     </header>
     <div class="unfinished">
-        <img src="../img/ibmgraph2.png" height="660">
+        <img src="../img/ibmgraph2.png" height="660"><br>
+        <a href="ibmgraph.html">return</a>
     </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
