--- a/pages/ibmlive.html
+++ b/pages/ibmlive.html
@@ -30,7 +30,8 @@
         </div>
     </header>
     <div class="unfinished">
-        <img src="../img/ibmlive.png" height="660">
+        <img src="../img/ibmlive.png" height="660"><br>
+        <a href="ibmhome.html">return</a>
     </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
