--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -50,5 +50,12 @@
     <script src="../src/presentdatas.js"></script>
     <script src="../src/main.js"></script>
     </div>
+    <div class="unfinished">
+      <a href="ibmgraph1.html">each line</a>
+      <a href="ibmhome.html">back</a>
+      <br>
+      <img src="../img/ibmgraph.png" height="660"><br>
+      <img src="../img/ibmgraph3.png">
+    </div>
 </body>
 </html>
