--- a/pages/place2.html
+++ b/pages/place2.html
@@ -37,7 +37,7 @@
             <a href="place1.html">場所１へ</a>
             <a href="LiveView.html">会議室へ</a>
             <br>
-            
+            <a href="person2-1.html">人物２へ</a>
         </div>
     </div>
     <!--スクリプト読み込み-->
