--- a/pages/ibmgraph1.html
+++ b/pages/ibmgraph1.html
@@ -30,7 +30,9 @@
         </div>
     </header>
     <div class="unfinished">
-        <img src="../img/ibmgraph1.png" height="660">
+        <img src="../img/ibmgraph1.png" height="660"><br>
+        <a href="mypage.html">return</a>
+        <a href="ibmgraph2.html">next</a>
     </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
