--- a/pages/ibmhome.html
+++ b/pages/ibmhome.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Welcome to IBM</title>
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
+    <link rel="stylesheet" href="../stylesheet/entrance.css">
 </head>
 <body>
     <header>
@@ -23,15 +24,16 @@
           <div class="header-left1">
             <a href="#" class="login">Support</a>
           </div>
-          <div class="header-right">
-            <a href="#" class="login">マイページ</a>
-          </div>
+          <!-- <div class="header-right">
+            <a href="login.html" class="login">login</a>
+          </div> -->
         </div>
-	</header>
-    <h1>人物２</h1>
-    <!--crossroadへ-->
-    <a href="place2.html">戻る</a>
-
+    </header>
+    <div class="unfinished">
+        <img src="../img/ibmhome.png" height="660"><br>
+        <a href="ibmlive.html">ibmlive</a>
+        <a href="mypage.html">graph</a>
+    </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
 </body>
