added links between pages

--- a/pages/LiveView.html
+++ b/pages/LiveView.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
-	<header>
+    <header>
         <div class="container">
           <div class="header-left">
             <a href="index.html"><img class="logo" src="../img/logo.png"></a>
@@ -16,21 +16,25 @@
             <a href="LiveView.html" class="login">Online Session</a>
           </div>
           <div class="header-left1">
-            <a href="#" class="login">Work in IBM</a>
+            <a href="place1.html" class="login">Work in IBM</a>
           </div>
           <div class="header-left1">
-            <a href="mypage.html" class="login">My Page</a>
+            <a href="studentmypage.html" class="login">My Page</a>
           </div>
           <div class="header-left1">
-            <a href="#" class="login">Support</a>
+            <a href="Q&A1.html" class="login">Support</a>
           </div>
-          <div class="header-right">
-            <a href="#" class="login">マイページ</a>
-          </div>
+          <!-- <div class="header-right">
+            <a href="login.html" class="login">login</a>
+          </div> -->
         </div>
-	</header>
+    </header>
 	<div class="top-wrapper-liveview">
-    <h1>LiveView</h1>
+	<h1>LiveView</h1>
+	<h3>
+		<a href="reactionlog.html" class="btn">Details</a>
+		<a href="place2.html" class="btn">return</a>
+	</h3>
     <main>
         <div class="content-area">
 			<div class="boxA">
