--- a/pages/dataroom.html
+++ b/pages/dataroom.html
@@ -16,13 +16,13 @@
             <a href="LiveView.html" class="login">Online Session</a>
           </div>
           <div class="header-left1">
-            <a href="#" class="login">Work in IBM</a>
+            <a href="place1.html" class="login">Work in IBM</a>
           </div>
           <div class="header-left1">
-            <a href="mypage.html" class="login">My Page</a>
+            <a href="studentmypage.html" class="login">My Page</a>
           </div>
           <div class="header-left1">
-            <a href="#" class="login">Support</a>
+            <a href="Q&A1.html" class="login">Support</a>
           </div>
           <!-- <div class="header-right">
             <a href="login.html" class="login">login</a>
@@ -30,7 +30,10 @@
         </div>
     </header>
     <div class="unfinished">
-        <img src="../img/dataroom.png" height="660">
+        <img src="../img/dataroom.png" height="660"><br>
+        <a href="archive.html" class="btn">to archive</a>
+        <a href="Q&A1.html" class="btn">to Q&A</a>
+        <a href="place1.html" class="btn">return</a>
     </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
