--- a/pages/ibmgraph4.html
+++ b/pages/ibmgraph4.html
@@ -13,16 +13,16 @@
             <a href="index.html"><img class="logo" src="../img/logo.png"></a>
           </div>
           <div class="header-left1">
-            <a href="LiveView.html" class="login">Online Session</a>
+            <a href="ibmlive.html" class="login">Online Session</a>
           </div>
           <div class="header-left1">
-            <a href="#" class="login">Work in IBM</a>
+            <a href="place1.html" class="login">Work in IBM</a>
           </div>
           <div class="header-left1">
-            <a href="mypage.html" class="login">My Page</a>
+            <a href="ibmhome.html" class="login">My Page</a>
           </div>
           <div class="header-left1">
-            <a href="#" class="login">Support</a>
+            <a href="Q&A1.html" class="login">Support</a>
           </div>
           <!-- <div class="header-right">
             <a href="login.html" class="login">login</a>
@@ -30,7 +30,8 @@
         </div>
     </header>
     <div class="unfinished">
-        <img src="../img/ibmgraph4.png" height="660">
+        <img src="../img/ibmgraph4.png" height="660"><br>
+        <a href="ibmgraph3.html" class="btn">return</a>
     </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
