--- a/pages/ibmhome.html
+++ b/pages/ibmhome.html
@@ -19,7 +19,7 @@
             <a href="#" class="login">Work in IBM</a>
           </div>
           <div class="header-left1">
-            <a href="mypage.html" class="login">My Page</a>
+            <a href="ibmhome.html" class="login">My Page</a>
           </div>
           <div class="header-left1">
             <a href="#" class="login">Support</a>
@@ -31,8 +31,8 @@
     </header>
     <div class="unfinished">
         <img src="../img/ibmhome.png" height="660"><br>
-        <a href="ibmlive.html">ibmlive</a>
-        <a href="mypage.html">graph</a>
+        <a href="ibmlive.html" class="btn">ibmlive</a>
+        <a href="mypage.html" class="btn">graph</a>
     </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
