--- a/pages/ibmlive.html
+++ b/pages/ibmlive.html
@@ -7,31 +7,31 @@
     <link rel="stylesheet" href="../stylesheet/entrance.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-          <div class="header-left">
-            <a href="index.html"><img class="logo" src="../img/logo.png"></a>
-          </div>
-          <div class="header-left1">
-            <a href="LiveView.html" class="login">Online Session</a>
-          </div>
-          <div class="header-left1">
-            <a href="#" class="login">Work in IBM</a>
-          </div>
-          <div class="header-left1">
-            <a href="mypage.html" class="login">My Page</a>
-          </div>
-          <div class="header-left1">
-            <a href="#" class="login">Support</a>
-          </div>
-          <!-- <div class="header-right">
-            <a href="login.html" class="login">login</a>
-          </div> -->
-        </div>
-    </header>
+  <header>
+    <div class="container">
+      <div class="header-left">
+        <a href="index.html"><img class="logo" src="../img/logo.png"></a>
+      </div>
+      <div class="header-left1">
+        <a href="ibmlive.html" class="login">Online Session</a>
+      </div>
+      <div class="header-left1">
+        <a href="place1.html" class="login">Work in IBM</a>
+      </div>
+      <div class="header-left1">
+        <a href="ibmhome.html" class="login">My Page</a>
+      </div>
+      <div class="header-left1">
+        <a href="Q&A1.html" class="login">Support</a>
+      </div>
+      <!-- <div class="header-right">
+        <a href="login.html" class="login">login</a>
+      </div> -->
+    </div>
+</header>
     <div class="unfinished">
         <img src="../img/ibmlive.png" height="660"><br>
-        <a href="ibmhome.html">return</a>
+        <a href="ibmhome.html" class="btn">return</a>
     </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
