--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -8,28 +8,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
 </head>
 <body>
-    <header>
-        <div class="container">
-          <div class="header-left">
-            <a href="index.html"><img class="logo" src="../img/logo.png"></a>
-          </div>
-          <div class="header-left1">
-            <a href="LiveView.html" class="login">Online Session</a>
-          </div>
-          <div class="header-left1">
-            <a href="#" class="login">Work in IBM</a>
-          </div>
-          <div class="header-left1">
-            <a href="mypage.html" class="login">My Page</a>
-          </div>
-          <div class="header-left1">
-            <a href="#" class="login">Support</a>
-          </div>
-          <div class="header-right">
-            <a href="#" class="login">マイページ</a>
-          </div>
-        </div>
-    </header>
+  <header>
+    <div class="container">
+      <div class="header-left">
+        <a href="index.html"><img class="logo" src="../img/logo.png"></a>
+      </div>
+      <div class="header-left1">
+        <a href="LiveView.html" class="login">Online Session</a>
+      </div>
+      <div class="header-left1">
+        <a href="place1.html" class="login">Work in IBM</a>
+      </div>
+      <div class="header-left1">
+        <a href="ibmhome.html" class="login">My Page</a>
+      </div>
+      <div class="header-left1">
+        <a href="Q&A1.html" class="login">Support</a>
+      </div>
+      <!-- <div class="header-right">
+        <a href="login.html" class="login">login</a>
+      </div> -->
+    </div>
+</header>
     <div class="top-wrapper-normal">
     <h1>企業ページ（統計データ）</h1>
     
@@ -37,22 +37,22 @@
         <canvas id="LineChart" style="display: block; height: 59px; width: 119px;" width="178" height="88" class="chartjs-render-monitor">
     </div>
 
-    <h2>Details</h2>
+    <!-- <h2>Details</h2> -->
     
-    <a href="button0heat.html">OK</a>
+    <!-- <a href="button0heat.html">OK</a>
     <a href="button1heat.html">NG</a>
     <a href="button2heat.html">?</a>
     <a href="button3heat.html">smile</a>
-    <br><br>
-    <a href="mypage.html">企業ページへ</a>
-    <a href="meetingroom.html">もどる</a>
+    <br><br> -->
+    <!-- <a href="mypage.html">企業ページへ</a>
+    <a href="meetingroom.html">もどる</a> -->
     <!--スクリプト読み込み-->
     <script src="../src/presentdatas.js"></script>
     <script src="../src/main.js"></script>
     </div>
     <div class="unfinished">
-      <a href="ibmgraph1.html">each line</a>
-      <a href="ibmhome.html">back</a>
+      <a href="ibmgraph1.html" class="btn">each line</a>
+      <a href="ibmhome.html" class="btn">return</a>
       <br>
       <img src="../img/ibmgraph.png" height="660"><br>
       <img src="../img/ibmgraph3.png">
