--- a/pages/place1.html
+++ b/pages/place1.html
@@ -6,37 +6,37 @@
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-          <div class="header-left">
-            <a href="index.html"><img class="logo" src="../img/logo.png"></a>
-          </div>
-          <div class="header-left1">
-            <a href="LiveView.html" class="login">Online Session</a>
-          </div>
-          <div class="header-left1">
-            <a href="#" class="login">Work in IBM</a>
-          </div>
-          <div class="header-left1">
-            <a href="mypage.html" class="login">My Page</a>
-          </div>
-          <div class="header-left1">
-            <a href="#" class="login">Support</a>
-          </div>
-          <div class="header-right">
-            <a href="#" class="login">マイページ</a>
-          </div>
-        </div>
-    </header>
+  <header>
+    <div class="container">
+      <div class="header-left">
+        <a href="index.html"><img class="logo" src="../img/logo.png"></a>
+      </div>
+      <div class="header-left1">
+        <a href="LiveView.html" class="login">Online Session</a>
+      </div>
+      <div class="header-left1">
+        <a href="place1.html" class="login">Work in IBM</a>
+      </div>
+      <div class="header-left1">
+        <a href="studentmypage.html" class="login">My Page</a>
+      </div>
+      <div class="header-left1">
+        <a href="Q&A1.html" class="login">Support</a>
+      </div>
+      <!-- <div class="header-right">
+        <a href="login.html" class="login">login</a>
+      </div> -->
+    </div>
+</header>
     <div class="top-wrapper-place1">
         <div class="container">
 			<div class="tooltip">
-                <a href="person1.html"><img src="../img/man.png"></a>
+                <a href="person1-1.html"><img src="../img/man.png"></a>
                 <div class="description">プロジェクトマネージャー<br>入社15年目</div>
-            </div> 
-            <a href="place2.html">場所２へ</a>
-            <br>
-            <a href="person1-1.html">人物１</a>
+            </div><br> 
+            <a href="place2.html" class="btn">場所２へ</a>
+            <a href="person1-1.html" class="btn">人物１</a>
+            <a href="dataroom.html" class="btn">資料室</a>
         </div>
     </div>
     <!--スクリプト読み込み-->
