--- a/pages/place2.html
+++ b/pages/place2.html
@@ -6,38 +6,38 @@
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-          <div class="header-left">
-            <a href="index.html"><img class="logo" src="../img/logo.png"></a>
-          </div>
-          <div class="header-left1">
-            <a href="LiveView.html" class="login">Online Session</a>
-          </div>
-          <div class="header-left1">
-            <a href="#" class="login">Work in IBM</a>
-          </div>
-          <div class="header-left1">
-            <a href="mypage.html" class="login">My Page</a>
-          </div>
-          <div class="header-left1">
-            <a href="#" class="login">Support</a>
-          </div>
-          <div class="header-right">
-            <a href="#" class="login">マイページ</a>
-          </div>
-        </div>
-    </header>
+  <header>
+    <div class="container">
+      <div class="header-left">
+        <a href="index.html"><img class="logo" src="../img/logo.png"></a>
+      </div>
+      <div class="header-left1">
+        <a href="LiveView.html" class="login">Online Session</a>
+      </div>
+      <div class="header-left1">
+        <a href="place1.html" class="login">Work in IBM</a>
+      </div>
+      <div class="header-left1">
+        <a href="studentmypage.html" class="login">My Page</a>
+      </div>
+      <div class="header-left1">
+        <a href="Q&A1.html" class="login">Support</a>
+      </div>
+      <!-- <div class="header-right">
+        <a href="login.html" class="login">login</a>
+      </div> -->
+    </div>
+</header>
     <div class="top-wrapper-place2">
         <div class="container">
             <div class="tooltip">
                 <a href="person2.html"><img src="../img/woman.png"></a>
                 <div class="description">ITコンサルティング<br>入社3年目</div>
             </div>            
-            <a href="place1.html">場所１へ</a>
-            <a href="LiveView.html">会議室へ</a>
             <br>
-            <a href="person2-1.html">人物２へ</a>
+            <a href="place1.html" class="btn">場所１へ</a>
+            <a href="LiveView.html" class="btn">会議室へ</a>
+            <a href="person2-1.html" class="btn">人物２へ</a>
         </div>
     </div>
     <!--スクリプト読み込み-->
