--- a/pages/studentmypage.html
+++ b/pages/studentmypage.html
@@ -24,21 +24,15 @@
       <div class="header-left1">
         <a href="Q&A1.html" class="login">Support</a>
       </div>
-      <div class="header-right">
+      <!-- <div class="header-right">
         <a href="login.html" class="login">login</a>
-      </div>
+      </div> -->
     </div>
 </header>
-    <div class="top-wrapper-entrance">
-        <div class="container">
-          <h1>Welcome to IBM</h1>
-          <div class="btn-wrapper">
-            <a href="register.html" class="btn">新規登録はこちら</a>
-            <a href="login.html" class="btn">ログインはこちら</a>
-            <a href="ibmhome.html" class="btn">企業向けマイページ</a>
-        </div>
-        </div>
-      </div>
+    <div class="unfinished">
+        <img src="../img/mypage.png" height="660"><br>
+        <a href="reactionlog.html" class="btn">my event</a>
+        
     </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
