--- a/pages/register.html
+++ b/pages/register.html
@@ -6,28 +6,28 @@
     <link rel="stylesheet" href="../stylesheet/stylesheet.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-          <div class="header-left">
-            <a href="index.html"><img class="logo" src="../img/logo.png"></a>
-          </div>
-          <div class="header-left1">
-            <a href="LiveView.html" class="login">Online Session</a>
-          </div>
-          <div class="header-left1">
-            <a href="#" class="login">Work in IBM</a>
-          </div>
-          <div class="header-left1">
-            <a href="mypage.html" class="login">My Page</a>
-          </div>
-          <div class="header-left1">
-            <a href="#" class="login">Support</a>
-          </div>
-          <!-- <div class="header-right">
-            <a href="login.html" class="login">login</a>
-          </div> -->
-        </div>
-    </header>
+  <header>
+    <div class="container">
+      <div class="header-left">
+        <a href="index.html"><img class="logo" src="../img/logo.png"></a>
+      </div>
+      <div class="header-left1">
+        <a href="LiveView.html" class="login">Online Session</a>
+      </div>
+      <div class="header-left1">
+        <a href="place1.html" class="login">Work in IBM</a>
+      </div>
+      <div class="header-left1">
+        <a href="studentmypage.html" class="login">My Page</a>
+      </div>
+      <div class="header-left1">
+        <a href="Q&A1.html" class="login">Support</a>
+      </div>
+      <div class="header-right">
+        <a href="login.html" class="login">login</a>
+      </div>
+    </div>
+</header>
     <div class="top-wrapper-normal">
         <div class="container">
           <h1>アカウント登録</h1>
