--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -55,7 +55,9 @@
       <a href="ibmhome.html" class="btn">return</a>
       <br>
       <img src="../img/ibmgraph.png" height="660"><br>
+      <a href="ibmgraph4.html" class="btn">
       <img src="../img/ibmgraph3.png">
+      </a>
     </div>
 </body>
 </html>
