--- a/pages/ibmgraph4.html
+++ b/pages/ibmgraph4.html
@@ -31,7 +31,7 @@
     </header>
     <div class="unfinished">
         <img src="../img/ibmgraph4.png" height="660"><br>
-        <a href="ibmgraph3.html" class="btn">return</a>
+        <a href="mypage.html">return</a>
     </div>
     <!--スクリプト読み込み-->
     <script src="../src/main.js"></script>
