--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -52,12 +52,13 @@
     </div>
     <div class="unfinished">
       <a href="ibmgraph1.html" class="btn">each line</a>
+      <a href="ibmgraph3.html" class="btn">each chat</a>
       <a href="ibmhome.html" class="btn">return</a>
       <br>
-      <img src="../img/ibmgraph.png" height="660"><br>
-      <a href="ibmgraph4.html" class="btn">
-      <img src="../img/ibmgraph3.png">
-      </a>
+      <img src="../img/ibmgraph.png"><br>
+      <!-- <a href="ibmgraph4.html" class="btn">
+      <img src="../img/ibmgraph3.png"> -->
+      <!-- </a> -->
     </div>
 </body>
 </html>
