--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -33,21 +33,11 @@
     <div class="top-wrapper-normal">
     <h1>企業ページ（統計データ）</h1>
     
-    <div style="width:75%;" class="aggregategraph">
-        <canvas id="LineChart" style="display: block; height: 59px; width: 119px;" width="178" height="88" class="chartjs-render-monitor">
+    <div style="width:50%; margin: 0 auto;" class="aggregategraph">
+        <!-- <canvas id="LineChart" style="display: block; height: 59px; width: 119px;" width="178" height="88" class="chartjs-render-monitor"> -->
+        <canvas id="LineChart">
+        <script src="../src/presentdatas.js"></script>
     </div>
-
-    <!-- <h2>Details</h2> -->
-    
-    <!-- <a href="button0heat.html">OK</a>
-    <a href="button1heat.html">NG</a>
-    <a href="button2heat.html">?</a>
-    <a href="button3heat.html">smile</a>
-    <br><br> -->
-    <!-- <a href="mypage.html">企業ページへ</a>
-    <a href="meetingroom.html">もどる</a> -->
-    <!--スクリプト読み込み-->
-    <script src="../src/presentdatas.js"></script>
     <script src="../src/main.js"></script>
     </div>
     <div class="unfinished">
